--- a/mkillconsumer/src/main/resources/templates/login.html
+++ b/mkillconsumer/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Title</title>
+    <title>登录</title>
     <link rel="stylesheet" type="text/css" href="../layui/css/main.css">
     <link rel="stylesheet" type="text/css" href="../layui/css/util.css">
 
@@ -35,16 +35,14 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn">登 录</button>
-                    </div>
+                        <button class="login100-form-btn">登 录</button></div>
                 </div>
 
                 <div class="txt1 text-center p-t-54 p-b-20">
                     <span>第三方登录</span>
                 </div>
 
-                <div class="flex-c-m">
-                    <a href="#" class="login100-social-item bg1">
+                <div class="flex-c-m"><a href="#" class="login100-social-item bg1">
                         <i class="fa fa-wechat">微信</i>
                     </a>
 
