--- a/mkillconsumer/src/main/resources/templates/index.html
+++ b/mkillconsumer/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>mkill 后台大布局</title>
-    <link rel="stylesheet" href="../layui/css/layui.css">
+    <link rel="stylesheet" href="../static/layui/css/layui.css">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -95,7 +95,7 @@
         © are-x
     </div>
 </div>
-<script src="../layui/layui.js"></script>
+<script src="../static/layui/layui.js"></script>
 <script>
     //JavaScript代码区域
     layui.use('element', function () {
