--- a/mkillconsumer/src/main/resources/templates/login.html
+++ b/mkillconsumer/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../static/layui/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" type="text/css" href="../static/layui/css/main.css">
     <link rel="stylesheet" type="text/css" href="../static/layui/css/util.css">
+    <link rel="stylesheet" type="text/css" href="../static/layui/css/layui.css">
 
 </head>
 <body>
@@ -46,15 +47,15 @@
                 </div>
 
                 <div class="flex-c-m"><a href="#" class="login100-social-item bg1">
-                    <i class="fa fa-wechat">微信</i>
+                    <i class="layui-icon layui-icon-login-wechat" style="font-size: 30px;"></i>
                 </a>
 
                     <a href="#" class="login100-social-item bg2">
-                        <i class="fa fa-qq">QQ</i>
+                        <i class="layui-icon layui-icon-login-qq" style="font-size: 30px;"></i>
                     </a>
 
                     <a href="#" class="login100-social-item bg3">
-                        <i class="fa fa-weibo">微博</i>
+                        <i class="layui-icon layui-icon-login-weibo" style="font-size: 30px;"></i>
                     </a>
                 </div>
 
