--- a/mkillconsumer/src/main/resources/templates/index.html
+++ b/mkillconsumer/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>mkill 后台大布局</title>
-    <link rel="stylesheet" href="../static/layui/css/layui.css">
+    <link rel="stylesheet" th:href="@{../static/layui/css/layui.css}">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -68,26 +68,26 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <table class="layui-table">
-            <colgroup>
-                <col width="150">
-                <col width="200">
-                <col>
-            </colgroup>
-            <thead>
-            <tr>
-                <th>昵称</th>
-                <th>加入时间</th>
-            </tr>
-            </thead>
-            <tbody th:remove="all-but-first">
-            <tr th:each="user : ${users.data}">
-                <td th:text="${user.name}" style="white-space: normal">Onions</td>
-                　　
-                <td th:text="${user.id}">2.41</td>
-            </tr>
-            </tbody>
-        </table>
+        <!--<table class="layui-table">-->
+            <!--<colgroup>-->
+                <!--<col width="150">-->
+                <!--<col width="200">-->
+                <!--<col>-->
+            <!--</colgroup>-->
+            <!--<thead>-->
+            <!--<tr>-->
+                <!--<th>昵称</th>-->
+                <!--<th>加入时间</th>-->
+            <!--</tr>-->
+            <!--</thead>-->
+            <!--<tbody th:remove="all-but-first">-->
+            <!--<tr th:each="user : ${users.data}">-->
+                <!--<td th:text="${user.name}" style="white-space: normal">Onions</td>-->
+                <!--　　-->
+                <!--<td th:text="${user.id}">2.41</td>-->
+            <!--</tr>-->
+            <!--</tbody>-->
+        <!--</table>-->
     </div>
 
     <div class="layui-footer">
@@ -95,7 +95,7 @@
         © are-x
     </div>
 </div>
-<script src="../static/layui/layui.js"></script>
+<script th:src="@{../static/layui/layui.js}"></script>
 <script>
     //JavaScript代码区域
     layui.use('element', function () {
