--- a/mkillconsumer/src/main/resources/templates/index.html
+++ b/mkillconsumer/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>mkill 后台大布局</title>
+    <title>mkill 后台</title>
     <link rel="stylesheet" th:href="@{../static/layui/css/layui.css}">
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">layui 后台布局</div>
+        <div class="layui-logo">mkill 后台布局</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
