--- a/mkillconsumer/src/main/resources/templates/login.html
+++ b/mkillconsumer/src/main/resources/templates/login.html
@@ -13,19 +13,20 @@
 <body>
 <div class="limiter">
     <div class="container-login100" style="background-image: url('/static/layui/images.login/bg-01.jpg');">
-        <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+        <div id="div1" class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
             <form class="login100-form validate-form">
                 <span class="login100-form-title p-b-49">登录</span>
 
                 <div class="wrap-input100 validate-input m-b-23" data-validate="请输入用户名">
                     <span class="label-input100">用户名</span>
-                    <input class="input100" type="text" name="username" placeholder="请输入用户名" autocomplete="off">
+                    <input id="username" class="input100" type="text" name="username" placeholder="请输入用户名"
+                           autocomplete="off">
                     <span class="focus-input100" data-symbol="&#xf206;"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="请输入密码">
                     <span class="label-input100">密码</span>
-                    <input class="input100" type="password" name="pass" placeholder="请输入密码">
+                    <input id="password" class="input100" type="password" name="pass" placeholder="请输入密码">
                     <span class="focus-input100" data-symbol="&#xf190;"></span>
                 </div>
 
@@ -36,7 +37,7 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button type="submit" class="login100-form-btn" onclick="login()">登 录</button>
+                        <button id="button" type="submit" class="login100-form-btn">登 录</button>
                     </div>
                 </div>
 
@@ -67,33 +68,24 @@
 <script th:src="@{../static/layui/jquery-3.2.1.min.js}"></script>
 <script th:src="@{../static/layui/login.js}"></script>
 <script>
-    function login() {
-        // var username = $("#username").val();
-        // var password = $("#password").val();
-        // if (username == "" || password == "") {
-        //     layer.msg('用户名或密码不能为空', {icon: 2});
-        //     return;
-        // }
-        $.ajax({
-            type: "POST",
-            url: "/in",
-            data: {
-                // "username": username,
-                // "password": password
-            },
-            success: function (e) {
-                // layer.msg(e.msg, {icon: 1});
-                // setTimeout(function () {
-                //     location.href = "in";
-                // }, 1500);
-                window.location.href = '/user';
-            },
-            error: function (e) {
-                console.log(e.responseText);
-                layer.msg(JSON.parse(e.responseText).msg, {icon: 2});
-            }
+    (function ($) {
+        $(document).ready(function () {
+            $("button").click(function () {
+                $.ajax({
+                    type: "POST",
+                    url: "/in",
+                    data: {},
+                    success: function (result) {
+                        window.location.href = "/admin"
+                    },
+                    error: function (e) {
+                        console.log(e.responseText);
+                        layer.msg(JSON.parse(e.responseText).msg, {icon: 2});
+                    }
+                });
+            });
         });
-    }
+    })(jQuery)
 </script>
 </body>
 </html>
