--- a/mkillconsumer/src/main/resources/templates/login.html
+++ b/mkillconsumer/src/main/resources/templates/login.html
@@ -37,7 +37,7 @@
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button id="button" type="submit" class="login100-form-btn">登 录</button>
+                        <button id="loginButton" class="login100-form-btn" onclick="login()">登 录</button>
                     </div>
                 </div>
 
@@ -66,26 +66,38 @@
     </div>
 </div>
 <script th:src="@{../static/layui/jquery-3.2.1.min.js}"></script>
-<script th:src="@{../static/layui/login.js}"></script>
-<script>
-    (function ($) {
-        $(document).ready(function () {
-            $("button").click(function () {
-                $.ajax({
-                    type: "POST",
-                    url: "/in",
-                    data: {},
-                    success: function (result) {
-                        window.location.href = "/admin"
-                    },
-                    error: function (e) {
-                        console.log(e.responseText);
-                        layer.msg(JSON.parse(e.responseText).msg, {icon: 2});
-                    }
-                });
-            });
+<script type="text/javascript">
+    function login() {
+        let username = $("#username").val();
+        let password = $("#password").val();
+        if (username === "") {
+            alert("用户名不能为空");
+            return;
+        }
+
+        if (password === "") {
+            alert("密码不能为空");
+            return;
+        }
+
+        $.ajax({
+            type: "post",
+            url: "checkLogin",
+            data: {
+                "username": username,
+                "password": password
+            },
+            dataType: "json",
+            success: function (r) {
+                if (r.errorCode === 10000) {
+                    location.href = "admin";
+                } else {
+                    alert("账号或者密码错误");
+                    location.href = "admin";
+                }
+            }
         });
-    })(jQuery)
+    }
 </script>
 </body>
 </html>
