新增商品和用户页面，进行稍微的信息查询

--- a/mkillconsumer/src/main/resources/templates/index.html
+++ b/mkillconsumer/src/main/resources/templates/index.html
@@ -12,9 +12,9 @@
         <div class="layui-logo">mkill 后台布局</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
+            <li class="layui-nav-item"><a href="admin">控制台</a></li>
+            <li class="layui-nav-item"><a onclick="openTab('商品管理', 'commodity')">商品管理</a></li>
+            <li class="layui-nav-item"><a onclick="openTab('用户', 'users')">用户</a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">其它系统</a>
                 <dl class="layui-nav-child">
@@ -46,10 +46,9 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">所有商品</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="javascript:;">列表三</a></dd>
-                        <dd><a th:href="login">超链接</a></dd>
+                        <dd><a onclick="openTab('列表一', 'login')">列表一</a></dd>
+                        <dd><a onclick="openTab('列表一', 'login')">列表二</a></dd>
+                        <dd><a onclick="openTab('列表一', 'login')">列表三</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -67,27 +66,7 @@
     </div>
 
     <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <!--<table class="layui-table">-->
-            <!--<colgroup>-->
-                <!--<col width="150">-->
-                <!--<col width="200">-->
-                <!--<col>-->
-            <!--</colgroup>-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<th>昵称</th>-->
-                <!--<th>加入时间</th>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tbody th:remove="all-but-first">-->
-            <!--<tr th:each="user : ${users.data}">-->
-                <!--<td th:text="${user.name}" style="white-space: normal">Onions</td>-->
-                <!--　　-->
-                <!--<td th:text="${user.id}">2.41</td>-->
-            <!--</tr>-->
-            <!--</tbody>-->
-        <!--</table>-->
+
     </div>
 
     <div class="layui-footer">
@@ -96,12 +75,15 @@
     </div>
 </div>
 <script th:src="@{../static/layui/layui.js}"></script>
-<script>
+<script th:src="@{../static/layui/jquery-3.2.1.min.js}"></script>
+<script type="text/javascript">
     //JavaScript代码区域
-    layui.use('element', function () {
-        var element = layui.element;
-
-    });
+    function openTab(title, url) {
+        //这里直接加载了，未使用ajax技术
+        $(".layui-body").load(
+            url
+        );
+    }
 </script>
 </body>
 </html>
