--- a/mkillconsumer/src/main/resources/templates/login.html
+++ b/mkillconsumer/src/main/resources/templates/login.html
@@ -89,7 +89,8 @@
             },
             dataType: "json",
             success: function (r) {
-                if (r.errorCode === 10000) {
+                if (r.data.errorCode === 10000) {
+                    alert("成功");
                     location.href = "admin";
                 } else {
                     alert("账号或者密码错误");
